--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=kayaerp
+spring.datasource.url=jdbc:sqlserver://172.18.87.11:1433;databaseName=KAYAERP;encrypt=true;trustServerCertificate=true
+spring.datasource.username=erp
+spring.datasource.password=147258+Erp
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
